# COE379

./: README.md  README2.md
Project/: graph.py  main.cxx  raymarch.cxx  times_25.txt
final/: CMakeLists.txt  main.cxx  output.txt  output_times.sh  raymarch.cxx  raymarch.h  times_100.txt  visualize.py
homework1/: CMakeLists.txt  commrank.cxx
homework10/: jacobi.cxx  times_4.txt  visualizations_1.py  visualizations_2.py
homework11/: CMakeLists.txt  output_times.sh  times.txt  times_1.txt  times_2.txt  times_3.txt  times_4.txt  times_5.txt  vectorsum.cxx  visualizations.py
homework2/: CMakeLists.txt  jordan.cxx
homework3/: CMakeLists.txt  scangather.cxx
homework4/: CMakeLists.txt  evenodd.cxx
homework5/: CMakeLists.txt  isendirecvarray.cxx
homework6/: CMakeLists.txt  stridescatter.cxx
homework7/: CMakeLists.txt  affinity_times.txt  affinity_vectorsum.cxx  output_times.sh  times.txt  vectorsum.cxx  visualizations.py
homework8/: CMakeLists.txt  jacobi.cxx  outer_jacobi.cxx  output_times.sh  times_1.txt  times_2.txt  times_3.txt  times_5.txt  times_6.txt  visualizations.py
homework9/: CMakeLists.txt
petsc/: output_times.sh  output_times_1.sh  output_times_2.sh  output_times_3.sh  output_times_4.sh  times_bcgs.txt  times_cg.txt  times_gmres  times_uns_05_bcgs.txt  times_uns_05_cg.txt  times_uns_bcgs.txt  times_uns_cg.txt  times_uns_gmres.txt  visualizations.py  visualizations_1.py  visualizations_2.py  visualizations_3.py  visualizations_4.py
petsc/times/: cost.txt  times_bcgs.txt  times_gmres.txt  times_uns_05_gmres.txt  times_uns_cg.txt
